# lotusmed-backend

./: .env.local  .gitignore  README.md  main.py  pyproject.toml
src/: main.py
src/agents/: openai_agent.py
src/api/v1/routes/: paraphrase.py  users.py
src/core/: config.py
src/models/: paraphrase.py  user.py
src/prompts/: __init__.py  medical_depiction.md  medical_infographic.md  medical_translation.md
